--- a/playbook.yml
+++ b/playbook.yml
@@ -7,8 +7,19 @@
     gitlab_apt_repos:
       - 'deb https://packages.gitlab.com/gitlab/gitlab-ce/ubuntu/ {{ ansible_distribution_release|lower }} main'
       - 'deb-src https://packages.gitlab.com/gitlab/gitlab-ce/ubuntu/ {{ ansible_distribution_release|lower }} main'
+    gosu_ver: '1.9'
   roles:
   tasks:
+    - name: Installing dumb-init
+      apt:
+        deb: "https://github.com/Yelp/dumb-init/releases/download/v1.0.2/dumb-init_1.0.2_amd64.deb"
+
+    - name: Installing gosu
+      get_url:
+        url: "https://github.com/tianon/gosu/releases/download/{{ gosu_ver }}/gosu-amd64"
+        dest: "/usr/local/bin/gosu"
+        mode: 0755
+
     - name: Installing Pre-Reqs
       apt:
         name: "{{ item }}"
