--- a/config/supervisord/supervisord.conf
+++ b/config/supervisord/supervisord.conf
@@ -10,5 +10,5 @@ autorestart=true
 
 [program:sshd]
 command=/usr/sbin/sshd -D
-autostart=true
-autorestart=true
+#autostart=true
+#autorestart=true
