--- a/config/supervisord/supervisord.conf
+++ b/config/supervisord/supervisord.conf
@@ -9,6 +9,6 @@ autostart=true
 autorestart=true
 
 [program:sshd]
-command=/usr/sbin/sshd -D
-#autostart=true
-#autorestart=true
+command=/usr/sbin/sshd
+autostart=true
+autorestart=true
