--- a/config/supervisord/supervisord.conf
+++ b/config/supervisord/supervisord.conf
@@ -9,6 +9,8 @@ autostart=true
 autorestart=true
 
 [program:sshd]
-command=/usr/sbin/sshd
+directory=/usr/local/
+command=/usr/sbin/sshd -D
 autostart=true
 autorestart=true
+redirect_stderr=true
